<resources>


    <!-- DUMMIES -->
    <string name="dummy_title">Kingsman: The Secret Service</string>
    <string name="dummy_summary">
        Following the events of Age of Ultron, the collective governments of the world pass an act
        designed to regulate all superhuman activity.
        This polarizes opinion amongst the Avengers, causing two factions…
    </string>
    <string name="dummy_cast">Cast: Jack Brown, Mitch Daniels, Sandy James</string>
    <string name="dummy_length">2 hr 15 min</string>
    <string name="dummy_rating">PG-13</string>
    <string name="dummy_year">2015</string>
    <!-- END DUMMIES -->


    <!-- LICENCES -->
    <string name="licence_glide">
        <a href="https://github.com/bumptech/glide">Glide</a> by Sam Judd under BSD
    </string>
    <string name="licence_gson">
        <a href="https://github.com/google/gson">Gson</a> by Google Inc. under AP2
    </string>
    <string name="licence_okhttp">
        <a href="https://github.com/square/okhttp">Okhttp</a> by Square, Inc. under AP2
    </string>
    <string name="licence_picasso">
        <a href="https://github.com/square/picasso">Picasso</a> by Square, Inc. under AP2
    </string>
    <string name="licence_retrofit">
        <a href="https://github.com/square/retrofit">Retrofit</a> by Square, Inc. under AP2
    </string>
    <string name="licence_tmdb">
        This product uses the TMDb API but is not endorsed or certified by TMDb.
    </string>
    <!-- END LICENCES -->


    <!-- TITLES -->
    <string name="app_name">Last Pick</string>
    <string name="title_activity_movie_shuffle">Movie Shuffle</string>
    <string name="title_activity_history">HistoryActivity</string>
    <string name="title_activity_movie">MovieActivity</string>
    <!-- END TITLES -->


    <!-- ACTIONS -->
    <string name="action_bookmark">Bookmark</string>
    <string name="action_filter">Filter</string>
    <string name="action_history">History</string>
    <string name="action_all_bookmark">Bookmarks</string>
    <string name="action_settings">Settings</string>
    <string name="action_about">About</string>
    <!-- END ACTIONS -->


    <!-- ITEMS -->
    <string name="backdrop">Backdrop</string>
    <string name="poster">Poster</string>
    <string name="popularity">Popularity</string>
    <string name="date">Date</string>
    <string name="clock">Clock</string>
    <string name="tmdb">The Movie Database</string>
    <string name="logo">Logo</string>
    <!-- END ITEMS -->


    <!-- OTHER -->
    <string name="scrolling_view">@string/appbar_scrolling_view_behavior</string>
    <string name="app_description">A simple movie discovery app.</string>
    <string name="third_party_libraries">Third-party libraries</string>
    <string name="youtube">YouTube</string>
    <string name="trailer">See Trailer</string>
    <string name="genre">Genre</string>
    <string name="year">Year</string>
    <string name="bottom_sheet_behavior">android.support.design.widget.BottomSheetBehavior</string>
    <string name="bar"> - </string>
    <string name="recycle">Recycle</string>
    <string name="open_drawer">Open Drawer</string>
    <string name="close_drawer">Close Drawer</string>
    <string name="section_main">Main</string>
    <string name="section_other">Other</string>
    <string name="action_send_feedback">Send Feedback</string>
    <string name="action_home">Home</string>
    <string name="action_watched">Watched</string>
    <string name="action_share">Share</string>
    <string name="as">as</string>
    <string name="cast">Cast + Crew</string>
    <string name="see_all">See All</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="in_theaters">Now Playing</string>
    <string name="popular">Popular</string>
    <string name="top_movies">Top Movies</string>
    <string name="upcoming">upcoming</string>
    <string name="title_activity_settings">Settings</string>

    <!-- Strings related to Settings -->

    <!-- Example General settings -->
    <string name="pref_header_general">General</string>

    <string name="pref_title_social_recommendations">Enable social recommendations</string>
    <string name="pref_description_social_recommendations">Recommendations for people to contact
        based on your message history
    </string>

    <string name="pref_title_display_name">Display name</string>
    <string name="pref_default_display_name">John Smith</string>

    <string name="pref_title_add_friends_to_messages">Add friends to messages</string>
    <string-array name="pref_example_list_titles">
        <item>Always</item>
        <item>When possible</item>
        <item>Never</item>
    </string-array>
    <string-array name="pref_example_list_values">
        <item>1</item>
        <item>0</item>
        <item>-1</item>
    </string-array>

    <!-- Example settings for Data & Sync -->
    <string name="pref_header_data_sync">Data &amp; sync</string>

    <string name="pref_title_sync_frequency">Sync frequency</string>
    <string-array name="pref_sync_frequency_titles">
        <item>15 minutes</item>
        <item>30 minutes</item>
        <item>1 hour</item>
        <item>3 hours</item>
        <item>6 hours</item>
        <item>Never</item>
    </string-array>
    <string-array name="pref_sync_frequency_values">
        <item>15</item>
        <item>30</item>
        <item>60</item>
        <item>180</item>
        <item>360</item>
        <item>-1</item>
    </string-array>

    <string-array name="list_preference_entries">
        <item>Entry 1</item>
        <item>Entry 2</item>
        <item>Entry 3</item>
    </string-array>

    <string-array name="list_preference_entry_values">
        <item>1</item>
        <item>2</item>
        <item>3</item>
    </string-array>

    <string-array name="multi_select_list_preference_default_value"/>

    <string name="pref_title_system_sync_settings">System sync settings</string>

    <!-- Example settings for Notifications -->
    <string name="pref_header_notifications">Notifications</string>

    <string name="pref_title_new_message_notifications">New message notifications</string>

    <string name="pref_title_ringtone">Ringtone</string>
    <string name="pref_ringtone_silent">Silent</string>

    <string name="pref_title_vibrate">Vibrate</string>
    <string name="scroll_aware_fab">joebruckner.lastpick.widgets.ScrollAwareFabBehavior</string>
    <string name="specials">Specials</string>
    <string name="select_all">Select All</string>
    <string name="show_all">Show all</string>
    <string name="filter_options">Filter Options</string>
    <string name="where_to_watch">Where to watch</string>
    <string name="see_all_trailers">See All Trailers</string>
    <string name="view_more">More</string>
    <string name="metacritic_reviews">Metacritic</string>
    <string name="rotten_tomatoes_reviews">Rotten Tomatoes</string>
    <string name="themoviedb_reviews">The Movie Database</string>
    <string name="image">image</string>

    <string-array name="see_all_button_values">
        <item>See all popular worklist</item>
        <item>See all now playing worklist</item>
        <item>See all upcoming worklist</item>
        <item>See all top rated worklist</item>
    </string-array>

    <string name="title_activity_image">ImageActivity</string>
    <string name="dummy_button">Dummy Button</string>
    <string name="dummy_content">DUMMY\nCONTENT</string>
    <string name="rating_threshold">/10</string>
    <string name="read_reviews">Read reviews</string>
    <string name="trailers">Trailers</string>
    <string name="images">Images</string>
    <string name="label_overview">Overview</string>
    <string name="action_login">Login</string>
    <string name="app_icon">app_icon</string>
    <string name="label_sources">Where to watch</string>
    <string name="label_cast">Cast</string>
    <string name="label_trailers">Trailers</string>
    <string name="label_images">Images</string>
    <string name="tagline">Some kind of tagline</string>
    <string name="label_cast_and_crew">Cast and Crew</string>


</resources>
