<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context="joebruckner.lastpick.ui.about.AboutActivity">

    <android.support.v7.widget.Toolbar
        android:id="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="?attr/colorPrimary"
        android:elevation="4dp"
        tools:ignore="UnusedAttribute">

    </android.support.v7.widget.Toolbar>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:padding="16dp"
        android:layout_below="@+id/toolbar">

        <ImageView
            android:id="@+id/icon"
            android:layout_width="72dp"
            android:layout_height="72dp"
            android:src="@mipmap/ic_launcher"
            android:contentDescription="@string/logo" />

        <TextView
            android:id="@+id/name"
            android:layout_width="wrap_content"
            android:layout_height="72dp"
            android:layout_toEndOf="@+id/icon"
            android:textSize="24sp"
            android:textStyle="bold"
            android:gravity="center"
            android:text="@string/app_name"/>

        <TextView
            android:id="@+id/app_description"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/icon"
            android:textSize="20dp"
            android:text="@string/app_description"/>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="24dp"
            android:layout_below="@+id/app_description"
            android:orientation="vertical">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="8dp"
                android:textSize="18dp"
                android:text="@string/third_party_libraries"/>

            <TextView
                android:id="@+id/glide"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:padding="2dp"
                android:textSize="18sp"
                android:text="@string/licence_glide"/>

            <TextView
                android:id="@+id/gson"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:padding="2dp"
                android:textSize="18sp"
                android:text="@string/licence_gson"/>

            <TextView
                android:id="@+id/okhttp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:padding="2dp"
                android:textSize="18sp"
                android:text="@string/licence_okhttp"/>

            <TextView
                android:id="@+id/retrofit"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:padding="2dp"
                android:textSize="18sp"
                android:text="@string/licence_retrofit"/>
        </LinearLayout>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_toStartOf="@+id/tmdb_icon"
            android:layout_alignParentBottom="true"
            android:text="@string/licence_tmdb"/>

        <ImageView
            android:id="@+id/tmdb_icon"
            android:layout_width="72dp"
            android:layout_height="72dp"
            android:layout_alignParentBottom="true"
            android:layout_alignParentEnd="true"
            android:src="@mipmap/ic_tmdb_logo"
            android:contentDescription="@string/tmdb" />
    </RelativeLayout>
</RelativeLayout>