<menu xmlns:tools="http://schemas.android.com/tools"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".ui.home.MovieShuffleActivityActivity">

    <item
        android:id="@+id/action_history"
        android:title="@string/action_history"
        android:icon="@drawable/ic_history_24dp"
        android:orderInCategory="10"
        app:showAsAction="never"/>

    <item
        android:id="@+id/action_view_bookmarks"
        android:title="@string/action_all_bookmark"
        android:icon="@drawable/ic_bookmark_collection_24dp"
        android:orderInCategory="50"
        app:showAsAction="never"/>

    <item
        android:id="@+id/action_about"
        android:title="@string/action_about"
        android:icon="@drawable/ic_info_24dp"
        android:orderInCategory="100"
        app:showAsAction="never"/>

</menu>
