<?xml version="1.0" encoding="utf-8"?>
<android.support.v7.widget.CardView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_margin="16dp">
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/md_grey_900"
    tools:ignore="RtlHardcoded">

    <ImageView
        android:id="@+id/poster"
        android:layout_width="115dp"
        android:layout_height="170dp"
        android:background="?attr/colorAccent"
        android:contentDescription="@string/poster"/>

    <TextView
        android:id="@+id/title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBottom="@id/poster"
        android:layout_toRightOf="@+id/poster"
        android:layout_marginLeft="16dp"
        android:layout_marginBottom="16dp"
        android:textStyle="bold"
        android:textSize="22sp"
        android:text="@string/dummy_title"/>

    <TextView
        android:id="@+id/year"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@+id/title"
        android:layout_alignLeft="@+id/title"
        android:padding="4dp"
        android:textStyle="normal"
        android:textSize="14sp"
        android:text="2015"/>

    <TextView
        android:id="@+id/rating"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@+id/title"
        android:layout_toRightOf="@+id/year"
        android:padding="4dp"
        android:textStyle="normal"
        android:textSize="14sp"
        android:text="PG-13"/>

    <TextView
        android:id="@+id/summary"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/poster"
        android:layout_margin="16dp"
        android:textSize="18sp"
        android:text="@string/dummy_summary"/>

    <TextView
        android:id="@+id/cast"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/summary"
        android:layout_marginLeft="20dp"
        android:layout_marginBottom="8dp"
        android:textSize="16sp"
        android:text="@string/dummy_cast"/>

    <TextView
        android:id="@+id/length"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/cast"
        android:layout_marginLeft="20dp"
        android:textSize="16sp"
        android:text="@string/dummy_length"/>
</RelativeLayout>
</android.support.v7.widget.CardView>