<android.support.v4.widget.NestedScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:targetApi="N">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <TextView
            android:id="@+id/trailers_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="16dp"
            android:textSize="20sp"
            android:textStyle="bold"
            android:text="@string/trailers"
            />

        <android.support.v7.widget.RecyclerView
            android:id="@+id/trailer_list"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:nestedScrollingEnabled="false"
            app:layoutManager="LinearLayoutManager"
            tools:listitem="@layout/card_trailer"
            tools:layout_height="240dp"
            />

        <Button
            android:id="@+id/view_more_trailers"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="end"
            android:text="@string/view_more"
            android:textColor="?attr/colorAccent"
            style="?android:borderlessButtonStyle"
            />

        <TextView
            android:id="@+id/images_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="16dp"
            android:textSize="20sp"
            android:textStyle="bold"
            android:text="@string/images"
            />

        <android.support.v7.widget.RecyclerView
            android:id="@+id/image_list"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:nestedScrollingEnabled="false"
            android:orientation="horizontal"
            app:layoutManager="StaggeredGridLayoutManager"
            app:spanCount="2"
            tools:listitem="@layout/card_poster"
            tools:layout_height="300dp"
            />

        <Button
            android:id="@+id/view_more_images"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="end"
            android:text="@string/view_more"
            android:textColor="?attr/colorAccent"
            style="?android:borderlessButtonStyle"
            />
    </LinearLayout>
</android.support.v4.widget.NestedScrollView>