<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@color/cardview_dark_background">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingStart="16dp"
            android:paddingEnd="16dp"
            android:textSize="20sp"
            android:textStyle="bold"
            android:fontFamily="sans-serif-condensed"
            android:text="@string/year"/>

        <TextView
            android:id="@+id/year_gte"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="18sp"
            android:textStyle="bold"
            android:fontFamily="sans-serif-condensed"
            tools:text="1920"/>

        <TextView
            android:id="@+id/bar"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding="8dp"
            android:textSize="20sp"
            android:textStyle="bold"
            android:fontFamily="sans-serif-condensed"
            android:text="@string/bar"/>

        <TextView
            android:id="@+id/year_lte"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="18sp"
            android:textStyle="bold"
            android:fontFamily="sans-serif-condensed"
            tools:text="2016"/>
    </LinearLayout>

    <com.appyvet.rangebar.RangeBar
        android:id="@+id/years"
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:layout_marginStart="20dp"
        android:layout_marginEnd="20dp"
        app:connectingLineColor="@color/md_white_1000"
        app:tickColor="@color/md_grey_700"
        app:rangeBarColor="@color/md_grey_700"
        app:selectorColor="@color/md_white_1000"
        app:pinRadius="0dp"
        app:tickStart="1920"
        app:tickEnd="2020"
        app:tickInterval="10"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:paddingStart="16dp"
        android:paddingEnd="16dp"
        android:textSize="20sp"
        android:textStyle="bold"
        android:fontFamily="sans-serif-condensed"
        android:text="@string/genre"/>

    <android.support.v7.widget.RecyclerView
        android:id="@+id/genres"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="16dp"
        android:orientation="horizontal"
        android:clipToPadding="false"
        app:layoutManager="StaggeredGridLayoutManager"
        app:spanCount="2"
        tools:listitem="@layout/card_filter"/>

</LinearLayout>